bynkc/tests/fixtures/positive/807_locale_stub_override/src/app/greet.bynk
context app.greet

consumes bynk { Locale }
uses bynk.locale
uses bynk.locale.types

service currentTag {
  on call() -> Effect[String] given Locale {
    let tag <- Locale.current()
    Effect.pure(tag)
  }
}

service greeting {
  on call() -> Effect[String] given Locale {
    let tag <- Locale.current()
    Effect.pure(render(tag, message("hello")))
  }
}
